# trans-matching

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  fetch_expedia_email.py  generate_report.py  main.py  main_agent.py  main_dashboard.py  pyproject.toml  render.yaml  report_agent_matching.html  report_matching.html
carta-credito/: Amex.csv
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.css  App.tsx  api.ts  notifications.ts  types.ts
gestionale/: maegec_875669_1.csv
tests/: test_agent_pool.py  test_amex_pdf.py  test_config.py  test_matching_heuristics.py  test_orphan_runs.py  test_pdf_ocr_lean.py  test_upload_async.py
trans_matching/: __init__.py  config.py  llm_usage.py  models.py  openai_http.py  paths.py  pipeline.py  timing.py
trans_matching/agent/: __init__.py  callbacks.py  context.py  dates.py  logging.py  matcher.py  pipeline.py  pool.py  rate_limit.py  router.py  sum_check.py  tools.py
trans_matching/email/: __init__.py  body.py  config.py  links.py  models.py  reader.py
trans_matching/matchers/: __init__.py  agent_models.py  amount.py  gestionale_text.py
trans_matching/parsers/: __init__.py  amex.py  common.py  gestionale.py  loaders.py  ocr_worker.py  pdf_text.py
trans_matching/reports/: __init__.py  amount.py  html.py  html_agent.py
trans_matching/storage/: __init__.py  agent_repository.py  repository.py
trans_matching/verifiers/: __init__.py  expedia_llm.py  expedia_parser.py  expedia_regex.py  expedia_trvl.py  msc_parser.py
(+15 files in other folders)
