[project]
name = "trans-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.0",
    "pydantic>=2.0",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "tqdm>=4.0",
]
