[project]
name = "trans-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.0",
    "pydantic>=2.0",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "tqdm>=4.0",
    "uvicorn[standard]>=0.32",
]
